--- a/_config.yml
+++ b/_config.yml
@@ -24,23 +24,23 @@ repository               : "signalmindlab/drabdus"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Md Abdus Samad"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Ph.D., Chosun University | 55+ publications in SCIE/SSCI journals | Data Science, Wireless Communication, Machine Learning"
+  location         : "South Korea"
+  employer         : "YeungnamUniversity"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "write@drabdus.com" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=NmUWfQIAAAAJ&hl=en"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-1990-6924"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=Samad+MA&cauthor_id=38067740"
   researchgate     : # URL
   scopus           : # URL
 
